# KadenHart.github.io

./: .gitignore  PrivacyPolicy.md  index.md
Software_Manual/: toc.md
Software_Manual/procedures/: AbsErrorTwoNorm.md  CrossProduct.md  DotProduct.md  InfNorm.md  MatTimesVector.md  NewtonsRoot.md  OneNorm.md  RelErrorInfNorm.md  RelErrorTwoNorm.md  SAXPY.md  SecantRoot.md  TwoNorm.md  VectorAdd.md  VectorScale.md  VectorSub.md  absErrorInfNorm  absErrorOneNorm.md  absoluteError.md  bisectionRoot.md  doublePrecision.md  fixedPointIteration.md  relError.md  relErrorOneNorm.md  singlePrecision.md
Software_Manual/procedures/Matrix/: diagMatSolve.md  gaussianSolve.md  lowerTMatSolve.md  luFactorization.md  luPivoting.md  luSolve.md  refMat.md  upperTMatSolve.md
Software_Manual/procedures/ts6/: GSSolve.md  choleskyFactor.md  genSquareDiagDominantMat.md  genSquareMat.md  genSymmetricDiagDominantMat.md  genSymmetricMat.md  jacobiSolve.md
src/: CMakeLists.txt  library.cpp  library.hpp
